first commit prim 3